# agentic-reasoning-framework

./: .env  .gitignore  README.md  cli_test.py  framework_demo.py  output.txt  output_deu.txt  pyproject.toml  requirements.txt  ruff.toml
agentic_reasoning/: __init__.py  backup_manager.py  config.py
agentic_reasoning/model_providers/: __init__.py  base.py  factory.py  huggingface.py
config/: toy.yaml
data/toy_set/bm25/: bm25_index.pkl
example_notebooks/: langchain_retrievers.ipynb  rag_workflow.ipynb
examples/: check_langgraph_postgres_saver.py  check_llm_response_time.py  check_model_tool_call.py  check_ocr.py  check_retrieval_tool_call.py  check_retrieval_with_middleware.py  check_single_doc_processing.py  check_single_document_ingestion.py  example_hybrid_retrieval.py  example_knowledge_base_processor.py  example_simple_rag_retrieval_chat.py  hf_backup_demo.py  stage1_doc_processing.py  stage1_knowledge_base_processor.py  stage2_chromadb_ingestion.py  stage2_chunk_and_store.py  stage3_retrieval.py  stage3_retrieval_checks.py  stage4_simple_rag_retrieval_chat.py  stage5_rag_chat_with_postgres.py  test_postgres_conn.py
notebooks/: agentic_rag.ipynb  basic_react_agent.py  langgraph101.ipynb  lg_summarizer.ipynb  llamaindex_retrievers.ipynb  rag_workflow.ipynb
src/: .env
src/agent-rag-streamlit/: agentrf_utils.py  config.yaml  requirements.txt  run_streamlit.py  streamlit_app.py  test_agentrf_utils.py
src/agentrf/: __init__.py  logger.py  settings.py
src/config/: loader.py  toy.yaml
src/distilled-agentrf/: react_agent.py
tests/: test_hf_backup.py
(+108 files in other folders)
