[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentic-reasoning-framework"
version = "0.1.0"
description = "A LangGraph-based framework to reason over documents"
authors = ["DataScience Lab FHSWF"]
readme = "README.md"
packages = [{include = "agentic_reasoning"}]

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.0.55"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
transformers = "^4.35.0"
torch = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]